--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,9 +48,7 @@ jobs:
           npm ls vike
 
       - name: Build Documentation
-        run: |
-          cd docs
-          npm run docs:publish
+        run: npm run docs:publish
 
       # - name: Deploy to GitHub Pages
       #   uses: peaceiris/actions-gh-pages@v3
