--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-classmate",
   "description": "A react tool to separate class name logic, create variants and manage styles.",
-  "version": "1.0.24",
+  "version": "1.1.0",
   "author": "https://github.com/richard-unterberg",
   "homepage": "https://react-classmate.dev/",
   "repository": {
@@ -27,7 +27,8 @@
     "frontend",
     "ssr",
     "tailwind",
-    "unocss"
+    "unocss",
+    "tailwind-merge"
   ],
   "license": "MIT",
   "type": "module",
@@ -74,7 +75,8 @@
     }
   },
   "peerDependencies": {
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "tailwind-merge": "^3.3.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.30.1"
