--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -2,7 +2,8 @@ name: Publish Package
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
     paths-ignore:
       - 'docs/**'     
   tags:
