--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -9,18 +9,20 @@ on:
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy
+    name: Build and deploy Github Page
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name: Checkout
+      - uses: actions/checkout@v4
+        with: {fetch-depth: 0}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: "18"
-          cache: 'npm'
+          node-version: 18
+          registry-url: https://registry.npmjs.org/
+          cache: npm
 
       - name: Cache node modules
         uses: actions/cache@v4
