--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "react-classmate",
   "description": "A react tool to separate class name logic, create variants and manage styles.",
-  "version": "1.1.4",
-  "bugs":  { "url": "https://github.com/unterberg-dev/react-classmate/issues" },
+  "version": "1.1.5",
+  "bugs": {
+    "url": "https://github.com/unterberg-dev/react-classmate/issues"
+  },
   "homepage": "https://github.com/unterberg-dev/react-classmate/#readme",
   "repository": {
     "type": "git",
@@ -74,11 +76,13 @@
     }
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "tailwind-merge": "^3.3.0"
+    "react": ">=16.8.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.30.1"
+  },
+  "dependencies": {
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
