--- a/package.json
+++ b/package.json
@@ -40,13 +40,9 @@
     "clean": "rm -rf dist",
     "clean:all": "rm -rf dist && rm -rf .localPack && rm -rf node_modules",
     "lefthook": "lefthook install",
-    "playwright": "npx playwright install",
-    "prepareE2E": "npm run packLocal && cd docs && npm i ../.localPack && cd ..",
     "========= Test": "",
     "test-clear": "jest --clearCache",
-    "test:all": "npm run test-clear && npm run test:src && npm run test:docs",
-    "test:docs": "npm run prepareE2E && playwright test ./test/docs",
-    "test:docs-ui": "npm run prepareE2E && playwright test ./test/docs --ui",
+    "test:all": "npm run test-clear && npm run test:src",
     "test:src": "npm run build && jest --testPathPattern=test/src",
     "========= Lib": "",
     "build:base": "npm run clean && npm run bundle",
@@ -91,7 +87,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@biomejs/biome": "1.9.4",
-    "@playwright/test": "^1.49.1",
+    "@testing-library/dom": "^10.0.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
@@ -103,7 +99,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lefthook": "^1.10.1",
-    "playwright": "^1.49.1",
     "rollup": "^4.29.1",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-esbuild-minify": "^1.2.0",
