--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,7 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noExplicitAny": "warn"
+        "noExplicitAny": "off"
       }
     },
     "ignore": ["dist", ".localPack", "node_modules", "package.json"]
