--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["src", "postbuild.ts"],
+  "include": ["src", "test", "postbuild.ts"],
   "exclude": ["node_modules", "dist", ".localPack"]
 }
