--- a/package.json
+++ b/package.json
@@ -1,112 +1,40 @@
 {
-  "name": "react-classmate",
-  "description": "A react tool to separate class name logic, create variants and manage styles.",
-  "version": "1.2.0",
-  "bugs": {
-    "url": "https://github.com/unterberg-dev/react-classmate/issues"
+  "name": "classmate-monorepo",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "dev": "npm run dev -w docs",
+    "build": "npm run build -ws --if-present",
+    "test": "npm run test:src -w react-classmate",
+    "lint": "npm run lint -ws --if-present",
+    "clean": "npm run clean -ws --if-present",
+    "package": "npm run package -w react-classmate",
+    "docs": "npm run dev -w docs",
+    "docs:build": "npm run build -w docs",
+    "docs:preview": "npm run preview -w docs"
   },
-  "homepage": "https://github.com/unterberg-dev/react-classmate/#readme",
+  "devDependencies": {
+    "@biomejs/biome": "1.9.4",
+    "typescript": "^5.9.3"
+  },
+  "description": "[![npm](https://img.shields.io/npm/v/react-classmate)](https://www.npmjs.com/package/react-classmate) [![npm bundle size](https://img.shields.io/bundlephobia/min/react-classmate)](https://bundlephobia.com/result?p=react-classmate)",
+  "main": "index.js",
+  "directories": {
+    "doc": "docs"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/unterberg-dev/react-classmate.git"
   },
-  "workspaces": [
-    "docs"
-  ],
-  "keywords": [
-    "react",
-    "classmate",
-    "typescript",
-    "dynamic-classnames",
-    "dynamic-styles",
-    "dynamic-variants",
-    "css",
-    "css-in-js",
-    "utility-first",
-    "utility-first-classnames",
-    "classname",
-    "classname-variants",
-    "frontend",
-    "ssr",
-    "tailwind",
-    "unocss",
-    "tailwind-merge"
-  ],
-  "license": "MIT",
-  "type": "module",
-  "sideEffects": false,
-  "scripts": {
-    "========= Root Actions": "",
-    "clean": "rm -rf dist",
-    "clean:all": "rm -rf dist && rm -rf .localPack && rm -rf node_modules",
-    "lefthook": "lefthook install",
-    "========= Test": "",
-    "test-clear": "jest --clearCache",
-    "test:all": "npm run test-clear && npm run test:src",
-    "test:src": "npm run build && jest --testPathPattern=test/src",
-    "check:all": "tsc --noEmit",
-    "========= Lib": "",
-    "build:base": "npm run clean && npm run bundle",
-    "build": "npm run build:base && npm run postbuild",
-    "packLocal": "npm run build:base && npm run postbuild:packLocal",
-    "postbuild": "npx tsx postbuild.ts",
-    "postbuild:packLocal": "cross-env MODE=packLocal npx tsx postbuild.ts",
-    "bundle": "rollup -c",
-    "package": "npm run build && npm publish",
-    "========= Docs": "",
-    "docs:build": "cd docs/ && npm run build",
-    "docs": "cd docs/ && npm run dev",
-    "docs:prod": "npm run docs:build && npm run docs:preview",
-    "docs:preview": "cd docs/ && npm run preview",
-    "========= gh-pages": "",
-    "docs:publish": "npm run docs:build"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/unterberg-dev/react-classmate/issues"
   },
-  "main": "./dist/index.cjs.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
-  "exports": {
-    ".": {
-      "require": "./dist/index.cjs.js",
-      "import": "./dist/index.js"
-    }
-  },
-  "peerDependencies": {
-    "react": ">=16.8.0"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.30.1"
-  },
-  "dependencies": {
-    "tailwind-merge": "^3.3.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@biomejs/biome": "1.9.4",
-    "@testing-library/dom": "^10.0.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.2 ",
-    "babel-jest": "^29.7.0",
-    "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lefthook": "^1.10.1",
-    "rollup": "^4.29.1",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild-minify": "^1.2.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.8.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
-  }
+  "homepage": "https://github.com/unterberg-dev/react-classmate#readme"
 }
