--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -51,50 +51,35 @@
     "========= Test": "",
     "test-clear": "jest --clearCache",
     "test:all": "npm run test-clear && npm run test:src",
-    "test:src": "npm run build && jest --testPathPattern=test/src",
+    "test:src": "npm run build:base && jest --config jest.config.cjs --testPathPattern=test/src",
     "check:all": "tsc --noEmit",
     "========= Build": "",
-    "build:base": "npm run clean && npm run bundle",
+    "build:base": "npm run clean && tsup",
     "build": "npm run build:base && npm run postbuild",
     "packLocal": "npm run build:base && npm run postbuild:packLocal",
     "postbuild": "npx tsx postbuild.ts",
     "postbuild:packLocal": "cross-env MODE=packLocal npx tsx postbuild.ts",
-    "bundle": "rollup -c",
     "package": "npm run build && npm publish"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.30.1"
-  },
   "dependencies": {
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.26.0",
-    "@testing-library/dom": "^10.0.0",
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-typescript": "^12.1.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.2",
-    "babel-jest": "^29.7.0",
     "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lefthook": "^1.10.1",
-    "rollup": "^4.29.1",
-    "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild-minify": "^1.2.0",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
     "tsx": "^4.19.2",
+    "tsup": "^8.3.0",
     "typescript": "^5.7.2"
   }
 }
