--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,14 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts",
+      "default": "./src/index.ts"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "echo \"TODO: build core\"",
+    "build": "tsup",
     "test": "echo \"TODO: test core\"",
     "clean": "rm -rf dist"
+  },
+  "devDependencies": {
+    "tsup": "^8.3.0",
+    "typescript": "^5.9.3"
   }
 }
